--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,72 @@
-# Compiled class file
-*.class
+# Build configuration and output directories
+.gradle
+.m2
+build/
+target/
+bin/
+!src/main/bin/
+lombok.config
 
-# Log file
+# Eclipse/STS
+.apt_generated
+.classpath
+.factorypath
+.metadata
+.project
+.settings
+.springBeans
+
+# IntelliJ IDEA
+*.iml
+*.ipr
+*.iws
+.idea
+atlassian-ide-plugin.xml
+out
+
+# NetBeans
+.nb-gradle/
+.nbattrs
+nbbuild/
+nbdist/
+nbproject/private/
+
+# VSCode
+.vscode
+
+# Packages, Archives, etc.
+#
+# It is better to unpack these files and commit the
+# raw source git has its own built in compression methods
+*.7z
+*.dmg
+*.iso
+*.rar
+*.tar
+*.zip
+
+# Compiled source
+*.class
+*.com
+*.dll
+*.exe
+*.o
+*.so
+
+# Logs and databases
 *.log
 
-# BlueJ files
-*.ctxt
+# OS generated files
+.DS_Store*
+ehthumbs.db
+Icon?
+Thumbs.db
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Editor Files
+*~
+*.swp
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Ignore Gradle build output directory
+build
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+session.json
