--- a/shop-server/src/main/resources/application.yml
+++ b/shop-server/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 ---
 micronaut:
-  application:
-    name: shop-server
+  application.name: shop-server
+  metrics.enabled: true
+  health.monitor.enabled: false
 
 ---
 redis:
